--- a/index.html
+++ b/index.html
@@ -153,45 +153,6 @@
         <div class="col-lg-4 col-md-6">
           <div class="projects-card">
             <img
-              src="./images/ghf.png"
-              class="card-img-top"
-              alt="project-img"
-              style="height: 200"
-            />
-            <div class="card-body text-center">
-              <div class="card-title">GHF</div>
-            </div>
-            <div class="projects-modal">
-              <div class="row mt-2">
-                <div class="col-9">
-                  <h5 class="card-title">Giving Hope Foundation</h5>
-                </div>
-                <div class="col-2">
-                  <a
-                    href="https://ghf.sat9.in/"
-                    target="_blank"
-                    rel="noreferrer"
-                  >
-                    <img
-                      src="./images/chrome.png"
-                      alt="internet"
-                      style="height: 30"
-                    />
-                  </a>
-                </div>
-              </div>
-              <p class="card-text text-info my-1">
-                GHF is registered trust working unbiasedly, focusing to deliver
-                hope to all endeavors leading to improve sustainability and
-                quality of life. To bring together technology, individuals, and
-                teams who work within their circle of knowledge.
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-6">
-          <div class="projects-card">
-            <img
               src="./images/feedback.png"
               class="card-img-top"
               alt="project-img"
@@ -229,6 +190,45 @@
                 time to provide us the feedback believes in our teams
                 capabilities and commitment towards ensuring our customers have
                 a pest free living..
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6">
+          <div class="projects-card">
+            <img
+              src="./images/pestxz.png"
+              class="card-img-top"
+              alt="project-img"
+              style="height: 200"
+            />
+            <div class="card-body text-center">
+              <div class="card-title">Pestxz</div>
+            </div>
+            <div class="projects-modal">
+              <div class="row mt-2">
+                <div class="col-9">
+                  <h5 class="card-title">Pestxz Service Tracking Portal</h5>
+                </div>
+                <div class="col-2">
+                  <a
+                    href="https://www.pestxz.com/"
+                    target="_blank"
+                    rel="noreferrer"
+                  >
+                    <img
+                      src="./images/chrome.png"
+                      alt="internet"
+                      style="height: 30"
+                    />
+                  </a>
+                </div>
+              </div>
+              <p class="card-text text-info my-1">
+                GHF is registered trust working unbiasedly, focusing to deliver
+                hope to all endeavors leading to improve sustainability and
+                quality of life. To bring together technology, individuals, and
+                teams who work within their circle of knowledge.
               </p>
             </div>
           </div>
@@ -287,19 +287,15 @@
               style="height: 200"
             />
             <div class="card-body text-center">
-              <div class="card-title">Report Generation</div>
+              <div class="card-title">Reminder</div>
             </div>
             <div class="projects-modal">
               <div class="row mt-2">
                 <div class="col-9">
-                  <h5 class="card-title">Report Generation</h5>
+                  <h5 class="card-title">Reminder Portal</h5>
                 </div>
                 <div class="col-2">
-                  <a
-                    href="https://eppl-feedback.netlify.app/"
-                    target="_blank"
-                    rel="noreferrer"
-                  >
+                  <a href="" target="_blank" rel="noreferrer">
                     <img
                       src="./images/chrome.png"
                       alt="internet"
@@ -321,12 +317,12 @@
               style="height: 200"
             />
             <div class="card-body text-center">
-              <div class="card-title">Hotels Dashboard</div>
+              <div class="card-title">Contract Quotation</div>
             </div>
             <div class="projects-modal">
               <div class="row mt-2">
                 <div class="col-9">
-                  <h5 class="card-title">Hotels Dashboard</h5>
+                  <h5 class="card-title">Contract Quotation</h5>
                 </div>
                 <div class="col-2">
                   <a
@@ -355,12 +351,12 @@
               style="height: 200"
             />
             <div class="card-body text-center">
-              <div class="card-title">Contract Quotation</div>
+              <div class="card-title">To Be Announced</div>
             </div>
             <div class="projects-modal">
               <div class="row mt-2">
                 <div class="col-9">
-                  <h5 class="card-title">Contract Quotation</h5>
+                  <h5 class="card-title">To Be Announced</h5>
                 </div>
                 <div class="col-2">
                   <a
@@ -376,7 +372,7 @@
                   </a>
                 </div>
               </div>
-              <p class="card-text text-info my-1">Work in progress</p>
+              <p class="card-text text-info my-1">To Be Announced</p>
             </div>
           </div>
         </div>
