reminder portal added

--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
         <div class="col-lg-4 col-md-6">
           <div class="projects-card">
             <img
-              src="./images/work1.jpg"
+              src="./images/reminder.png"
               class="card-img-top"
               alt="project-img"
               style="height: 200"
@@ -295,7 +295,11 @@
                   <h5 class="card-title">Reminder Portal</h5>
                 </div>
                 <div class="col-2">
-                  <a href="" target="_blank" rel="noreferrer">
+                  <a
+                    href="https://www.reminder.sat9.in"
+                    target="_blank"
+                    rel="noreferrer"
+                  >
                     <img
                       src="./images/chrome.png"
                       alt="internet"
@@ -304,7 +308,12 @@
                   </a>
                 </div>
               </div>
-              <p class="card-text text-info my-1">Work in progress</p>
+              <p class="card-text text-info my-1">
+                Transform the way you track dates. Automate expiration reminders
+                & follow-ups and avoid missed date penalties. Track contracts,
+                licenses, certifications, warranties, and other important
+                documents with Email & WhatsApp reminders.
+              </p>
             </div>
           </div>
         </div>
