single service slip project added

--- a/index.html
+++ b/index.html
@@ -354,22 +354,22 @@
         <div class="col-lg-4 col-md-6">
           <div class="projects-card">
             <img
-              src="./images/work1.jpg"
+              src="./images/sss.png"
               class="card-img-top"
               alt="project-img"
               style="height: 200"
             />
             <div class="card-body text-center">
-              <div class="card-title">To Be Announced</div>
+              <div class="card-title">Single Service Slip</div>
             </div>
             <div class="projects-modal">
               <div class="row mt-2">
                 <div class="col-9">
-                  <h5 class="card-title">To Be Announced</h5>
+                  <h5 class="card-title">Single Service Slip</h5>
                 </div>
                 <div class="col-2">
                   <a
-                    href="https://eppl-feedback.netlify.app/"
+                    href="https://sss.sat9.in/"
                     target="_blank"
                     rel="noreferrer"
                   >
@@ -381,7 +381,7 @@
                   </a>
                 </div>
               </div>
-              <p class="card-text text-info my-1">To Be Announced</p>
+              <p class="card-text text-info my-1">Single Service Slip is alternative to delivery challans and it is made to create QR based slip for single pest services. Which can be tracked by scanning QR code.</p>
             </div>
           </div>
         </div>
