single slip project description changes

--- a/index.html
+++ b/index.html
@@ -381,7 +381,14 @@
                   </a>
                 </div>
               </div>
-              <p class="card-text text-info my-1">Single Service Slip is alternative to delivery challans and it is made to create QR based slip for single pest services. Which can be tracked by scanning QR code.</p>
+              <p class="card-text text-info my-1">
+                A single service slip in the pest control industry is a specific
+                document used to record the details of a single pest control
+                service visit. It is a vital part of the pest control
+                process and helps in maintaining records, billing clients, and
+                ensuring transparency in service delivery. Slips has QR code
+                which can be scanned to update the real time status of the service.
+              </p>
             </div>
           </div>
         </div>
